--- a/src/components/HomePage/Homepage.css
+++ b/src/components/HomePage/Homepage.css
@@ -65,5 +65,22 @@
     flex-direction: column;
     border-radius: 0.3rem;
     margin: 1rem;
+    overflow: scroll;
     background-color: var(--blue-100);
+}
+
+.archive-note{
+    max-height: 20rem;
+    max-width: 40rem;
+    flex-direction: column;
+    border-radius: 0.3rem;
+    margin: 1rem;
+    overflow: scroll;
+    background-color: var(--blue-100);
+}
+
+.emptyPage{
+    align-self: center;
+    margin-left: 20rem;
+    color: var(--blue-300);
 }
