--- a/src/components/HomePage/Homepage.css
+++ b/src/components/HomePage/Homepage.css
@@ -61,13 +61,15 @@
 }
 .note{
     min-height: 20rem;
+    width: 20rem;
     max-width: 40rem;
     flex-direction: column;
     border-radius: 0.3rem;
     margin: 1rem;
     overflow: scroll;
-    background-color: var(--blue-100);
+
 }
+
 
 .archive-note{
     max-height: 20rem;
@@ -83,4 +85,32 @@
     align-self: center;
     margin-left: 20rem;
     color: var(--blue-300);
+}
+
+/* color classes */
+
+.red{
+    background-color: #F87171;
+}
+
+
+.yellow{
+    background-color: #FBBF24;
+}
+
+.green{
+    background-color: #34D399;
+}
+
+.pink{
+    background-color: #F472B6 ;
+}
+
+.purple{
+    background-color: #A78BFA ;
+}
+
+.clr-btn{
+    border: 1px solid white;
+    padding: 1rem;
 }
