feat: modal component added

--- a/src/components/HomePage/Homepage.css
+++ b/src/components/HomePage/Homepage.css
@@ -114,3 +114,26 @@
     border: 1px solid white;
     padding: 1rem;
 }
+
+/* edit modal */
+
+.edit-Modal{
+    background-color: var(--blue-300);
+    /* display: none;  */
+    position: fixed;
+    z-index: 999; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: auto; 
+} 
+
+.modal-overlay{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
