--- a/src/components/HomePage/Homepage.css
+++ b/src/components/HomePage/Homepage.css
@@ -35,11 +35,17 @@
     flex-direction: column;
 }
 
+
 .title-input-note{
     min-height: 4rem;
     text-align: center;
 }
 
+.label-input-note{
+    text-align: center;
+    max-width: 6rem;
+    max-height: 2.5rem;
+}
 .content-input-note{
     min-height: 10rem;
     padding: 1rem 1rem;
@@ -47,6 +53,7 @@
 
 .notes-btn{
     margin-left: auto;
+    align-items: center;
 }
 
 .notes-icon{
@@ -70,6 +77,25 @@
 
 }
 
+.badge-note, .priority-note{
+    border: 1px solid white;
+    ;
+    border-radius: 0.3rem;
+    padding: 0.3rem;
+    font-size: 1rem;
+}
+
+.badge-note{
+    top: 0.4rem;
+    right: 0.4rem;
+    background-color: var(--blue-100)
+}
+
+.priority-note{
+    bottom: 0.4rem;
+    left: 0.4rem;
+    background-color: var(--blue-300);
+}
 
 .archive-note{
     max-height: 20rem;
