--- a/src/components/HomePage/Homepage.css
+++ b/src/components/HomePage/Homepage.css
@@ -29,6 +29,27 @@ a:visited{
     flex-grow: 1;
     margin: 3.5rem 2rem;
 }
+
+/* search bar */
+.input-search {
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.3rem;
+}
+.input-search > i {
+    cursor: pointer;
+    top: 0rem;
+}
+
+.input-search > input{
+    padding: 0.2rem 0.8rem;
+    font-size: 1.7rem;
+    border: 1px solid black;
+    border-radius: 0.3rem;
+    min-width: 60rem;
+
+}
+
 /* Notes input */
 .input-note-container{
     border: 1px solid black;
@@ -185,4 +206,5 @@ a:visited{
     background-color: var(--blue-300);
     padding: 1rem;
     border-radius: 0.5rem;
+    margin-right: 4rem;
 }
